; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/cs46xx/extr_dsp_spos.c_cs46xx_dsp_disable_spdif_hw.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/cs46xx/extr_dsp_spos.c_cs46xx_dsp_disable_spdif_hw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_cs46xx = type { %struct.dsp_spos_instance* }
%struct.dsp_spos_instance = type { i32 }

@BA0_ASER_FADDR = common dso_local global i32 0, align 4
@SP_SPDOUT_CONTROL = common dso_local global i32 0, align 4
@SP_SPDOUT_CSUV = common dso_local global i32 0, align 4
@SP_SPDIN_FIFOPTR = common dso_local global i32 0, align 4
@DSP_SPDIF_STATUS_HW_ENABLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_cs46xx*)* @cs46xx_dsp_disable_spdif_hw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cs46xx_dsp_disable_spdif_hw(%struct.snd_cs46xx* %0) #0 {
  %2 = alloca %struct.snd_cs46xx*, align 8
  %3 = alloca %struct.dsp_spos_instance*, align 8
  store %struct.snd_cs46xx* %0, %struct.snd_cs46xx** %2, align 8
  %4 = load %struct.snd_cs46xx*, %struct.snd_cs46xx** %2, align 8
  %5 = getelementptr inbounds %struct.snd_cs46xx, %struct.snd_cs46xx* %4, i32 0, i32 0
  %6 = load %struct.dsp_spos_instance*, %struct.dsp_spos_instance** %5, align 8
  store %struct.dsp_spos_instance* %6, %struct.dsp_spos_instance** %3, align 8
  %7 = load %struct.snd_cs46xx*, %struct.snd_cs46xx** %2, align 8
  %8 = load i32, i32* @BA0_ASER_FADDR, align 4
  %9 = call i32 @snd_cs46xx_pokeBA0(%struct.snd_cs46xx* %7, i32 %8, i32 0)
  %10 = load %struct.snd_cs46xx*, %struct.snd_cs46xx** %2, align 8
  %11 = load i32, i32* @SP_SPDOUT_CONTROL, align 4
  %12 = call i32 @cs46xx_poke_via_dsp(%struct.snd_cs46xx* %10, i32 %11, i32 0)
  %13 = load %struct.snd_cs46xx*, %struct.snd_cs46xx** %2, align 8
  %14 = load i32, i32* @SP_SPDOUT_CSUV, align 4
  %15 = call i32 @cs46xx_poke_via_dsp(%struct.snd_cs46xx* %13, i32 %14, i32 0)
  %16 = load %struct.snd_cs46xx*, %struct.snd_cs46xx** %2, align 8
  %17 = load i32, i32* @SP_SPDIN_FIFOPTR, align 4
  %18 = call i32 @cs46xx_poke_via_dsp(%struct.snd_cs46xx* %16, i32 %17, i32 0)
  %19 = load i32, i32* @DSP_SPDIF_STATUS_HW_ENABLED, align 4
  %20 = xor i32 %19, -1
  %21 = load %struct.dsp_spos_instance*, %struct.dsp_spos_instance** %3, align 8
  %22 = getelementptr inbounds %struct.dsp_spos_instance, %struct.dsp_spos_instance* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = and i32 %23, %20
  store i32 %24, i32* %22, align 4
  ret void
}

declare dso_local i32 @snd_cs46xx_pokeBA0(%struct.snd_cs46xx*, i32, i32) #1

declare dso_local i32 @cs46xx_poke_via_dsp(%struct.snd_cs46xx*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
